<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/windtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/logica"
        android:textColor="@color/title"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/windSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windtitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Title_padrao"
        android:textColor="@color/subTitle"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Pradrao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSubTitle" />


    <TextView
        android:id="@+id/windSubTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/condicionais"
        android:textColor="@color/subTitle"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_Pradrao" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSubTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_Condicionais"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:paddingTop="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/condicioned_recyclerdesig" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingPadraoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/adicionar_uma_logica_padr_o_ou_condicional"
        android:focusable="true"
        android:src="@drawable/ic_baseline_sync_24"
        android:tint="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/mila_primary_green_700"
        app:layout_constraintBottom_toTopOf="@id/floatingCondButton"
        app:layout_constraintEnd_toEndOf="@+id/floatingCondButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingCondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:clickable="true"
        android:contentDescription="@string/adicionar_uma_logica_padr_o_ou_condicional"
        android:focusable="true"
        android:src="@drawable/ic_baseline_wifi"
        android:tint="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/mila_primary_green_700"
        app:layout_constraintBottom_toTopOf="@id/floatingAddButton"
        app:layout_constraintEnd_toEndOf="@+id/floatingAddButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/adicionar_uma_logica_padr_o_ou_condicional"
        android:focusable="true"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>